png/core/chunk: Bugfix: Make module names case-insensitive
Guile-PNG would always fail on platforms where file names are case-insensitive
because there is "tEXT.scm" module along with "tEXt.scm" in the same
directory.  This patch renames modules in such a way that the typed chunk
module names are differ in all the cases.  Also all chunk modules now have
lower-case names.

Reported by Aleix Conchillo Flaqué in here:
https://github.com/artyom-poptsov/guile-png/issues/2

* NEWS: Update.
* modules/png/chunk-decoder.scm: Update.
* modules/png/image.scm: Update.
* modules/png/core/chunk/IEND.scm: Rename to "iend.scm".
* modules/png/core/chunk/IHDR.scm: Rename to "ihdr.scm".
* modules/png/core/chunk/PLTE.scm: Rename to "plte.scm".
* modules/png/core/chunk/bKGD.scm: Rename to "bkgd.scm".
* modules/png/core/chunk/cHRM.scm: Rename to "chrm.scm".
* modules/png/core/chunk/iCCP.scm: Rename to "iccp.scm".
* modules/png/core/chunk/pHYs.scm: Rename to "phys.scm".
* modules/png/core/chunk/tEXt.scm: Rename to "text.scm".
* modules/png/core/chunk/tEXT.scm: Move the code to
  "modules/png/core/chunk/text.scm".
* modules/png/core/chunk/tIME.scm: Rename to "time.scm".
* modules/png/core/chunk/zTXt.scm: Rename to "ztxt.scm".
* modules/png/core/chunk/Makefile.am: Update.
* tests/chunks.scm, tests/image.scm: Update.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,17 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
+* Unreleased
+** Bugfix: Rename chunk modules                                  :API_CHANGE:
+Now chunk modules in =(png core chunk ...)= are renamed in the lowercase
+manner.  Also =tEXT= and =tEXt= classes are placed in the same module to
+address the issue with case-insensitive filesystems where "tEXT.scm" and
+"tEXt.scm" considered the same file.
+
+Reported by Aleix Conchillo Flaqué in here:
+https://github.com/artyom-poptsov/guile-png/issues/2
+
+ 
 * Changes in version 0.4.1 (2023-05-06)
 ** Bugfix: =png-image-clone= now clones image data
 =png-image-clone= now produces full clone of the image data as expected.
