--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -10,7 +10,7 @@
 @copying
 This manual documents Guile-PNG version @value{VERSION}.
 
-Copyright (C) 2022 Artyom V. Poptsov
+Copyright (C) 2022-2023 Artyom V. Poptsov
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3 or
@@ -680,17 +680,28 @@ Get the diameter of a @var{circle}.
 @code{(png image-processing)} provides high-level API for processing PNG
 images.
 
-@deffn {Method} png-image-filter-invert-colors (image <png-image>)
+@deffn {Method} png-image-invert-colors (image <png-image>)
 
 Invert colors of an @var{image}, return a new image.
 
 @end deffn
 
-@deffn {Method} png-image-filter-solarize (image     <png-image>) @
-                                          (threshold <number>)
+@deffn {Method} png-image-solarize (image     <png-image>) @
+                                   (threshold <number>)
 
 Apply solarization effect to an @var{image} with the given @var{threshold}.
 Return a new image.
+
+@end deffn
+
+@deffn {Scheme Procedure} png-image-grayscale image @
+                                              [#:method='weighted]
+
+Copy an @var{image} and apply 'grayscale' effect on the copy.  Return the new
+image.
+
+A @var{method} is a symbol that is expected to be either @code{weighted} (default)
+or @code{average}.
 
 @end deffn
 
