--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
-* Unreleased
+* Changes in version 0.6.0 (2023-06-11)
 ** Make image processing procedures names shorter                :API_CHANGE:
 *** =png-image-filter-grayscale=: Rename to =png-image-grayscale=
 *** =png-image-filter-invert-colors=: Rename to =png-image-invert-colors=
