--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -76,11 +76,11 @@ that provides API for Portable Network Graphics
 @node Installation
 @chapter Installation
 
-Guile-ICS sources are available form GitHub at
+Guile-PNG sources are available form GitHub at
 @url{https://github.com/artyom-poptsov/guile-png}.  This section
-describes Guile-ICS requirements and installation process.
+describes Guile-PNG requirements and installation process.
 
-Guile-ICS depends on the following packages:
+Guile-PNG depends on the following packages:
 @itemize
 @item @url{https://www.gnu.org/software/guile/, GNU Guile}, 2.0.12 or later
 @item @url{https://github.com/artyom-poptsov/guile-smc, Guile-SMC}, 0.5.2
