--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -83,16 +83,25 @@ describes Guile-PNG requirements and installation process.
 Guile-PNG depends on the following packages:
 @itemize
 @item @url{https://www.gnu.org/software/guile/, GNU Guile}, 2.2 or later
-@item @url{https://github.com/artyom-poptsov/guile-smc, Guile-SMC}, 0.6.0
+@item @url{https://github.com/artyom-poptsov/guile-smc, Guile-SMC}, 0.6
 @end itemize
 
 @section GNU Guix
+
+@subsection Stable version
+@example
+$ guix install guile-png
+@end example
 
 @subsection Development version
 @example
 $ guix build -f ./guix.scm
 $ guix package -f ./guix.scm
 @end example
+
+@section macOS
+Guile-PNG is available in @url{https://github.com/aconchillo/homebrew-guile,
+Guile Homebrew Tap}.
 
 @section Manual Installation
 
