--- a/doc/guile-png.texi
+++ b/doc/guile-png.texi
@@ -61,6 +61,12 @@ Appendices
 
 * GNU Free Documentation License::  The license of this manual.
 
+Indices
+
+* Type Index::
+* Procedure Index::
+* Concept Index::
+
 @end menu
 
 @contents
@@ -1017,5 +1023,7 @@ chromaticities and white point) chunk.
 @appendix GNU Free Documentation License
 
 @include fdl.texi
+
+@include indices.texi
 
 @bye
